--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-cron": "^2.0.3",
+    "node-schedule": "^1.3.2",
     "node-telegram-bot-api": "^0.50.0",
     "nodemon": "^2.0.4",
     "puppeteer": "^4.0.0"
