--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-schedule": "^1.3.2",
     "node-telegram-bot-api": "^0.50.0",
     "nodemon": "^2.0.4",
-    "puppeteer": "^4.0.0"
+    "puppeteer": "^4.0.0",
+    "telebot": "^1.4.1"
   }
 }
