--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon test/test_bot.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +17,7 @@
     "node-cron": "^2.0.3",
     "node-schedule": "^1.3.2",
     "node-telegram-bot-api": "^0.50.0",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.6",
     "puppeteer": "^4.0.0",
     "telebot": "^1.4.1"
   }
