--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "test",
+  "name": "telebot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "telebot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon test/test_bot.js"
+    "start": "pm2 start telebot.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "node-schedule": "^1.3.2",
     "node-telegram-bot-api": "^0.50.0",
     "nodemon": "^2.0.6",
+    "pm2": "^4.5.0",
     "puppeteer": "^4.0.0",
     "telebot": "^1.4.1"
   }
